--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <title>columns-of-cards</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h2>Featured books</h2>
+    <h2 class="h2">Featured books</h2>
   </header>
   <section>
     <article class="anderson">
@@ -16,10 +17,10 @@
         <img src="images/placeholder-2by3.svg" alt="…">
       </div>
       <div class="content">
-        <h3>The Quest for Anderson</h3>
+        <h3>The Quest for Anderon</h3>
         <cite>Tabatha R. Barrett</cite>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-        <a class="btn" href="#">Read Now</a>
+        <a class="btn btn-small" href="#">Read Now</a>
       </div>
     </article>
     <article class="dino">
@@ -30,7 +31,7 @@
         <h3>Dinosaur Knights</h3>
         <cite>Thomas S. Hedegaard</cite>
         <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-        <a class="btn" href="#">Read Now</a>
+        <a class="btn btn-small" href="#">Read Now</a>
       </div>
     </article>
     <article class="dragon">
@@ -41,7 +42,7 @@
         <h3>The Black Dragon</h3>
         <cite>Hana Čejková</cite>
         <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-        <a class="btn" href="#">Read Now</a>
+        <a class="btn btn-small" href="#">Read Now</a>
       </div>
     </article>
     <article class="ships">
@@ -52,7 +53,7 @@
         <h3>Light Speed Laser Ships</h3>
         <cite>Felicity Orta Olivárez</cite>
         <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-        <a class="btn" href="#">Read Now</a>
+        <a class="btn btn-small" href="#">Read Now</a>
       </div>
     </article>
   </section>
