adjust the boarder colors on the left and right

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a class="btn btn-small" href="#">Read Now</a>
       </div>
     </article>
-    <article class="ships">
+    <article class="ships right">
       <div class="image">
         <img src="images/placeholder-2by3.svg" alt="…">
       </div>
