--- a/index.html
+++ b/index.html
@@ -10,61 +10,61 @@
 <body>
   <header>
     <h2 class="h2">Featured books</h2>
+    <section>
+      <article class="anderson left">
+        <div class="image">
+          <img src="images/placeholder-2by3.svg" alt="…">
+        </div>
+        <div class="content">
+          <h3>The Quest for Anderon</h3>
+          <cite>Tabatha R. Barrett</cite>
+          <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+        </div>
+        <div>
+          <a class="btn btn-small" href="#">Read Now</a>
+        </div>
+      </article>
+      <article class="dino">
+        <div class="image">
+          <img src="images/placeholder-2by3.svg" alt="…">
+        </div>
+        <div class="content">
+          <h3>Dinosaur Knights</h3>
+          <cite>Thomas S. Hedegaard</cite>
+          <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
+        </div>
+        <div>
+          <a class="btn btn-small" href="#">Read Now</a>
+        </div>
+      </article>
+      <article class="dragon">
+        <div class="image">
+          <img src="images/placeholder-2by3.svg" alt="…">
+        </div>
+        <div class="content">
+          <h3>The Black Dragon</h3>
+          <cite>Hana Čejková</cite>
+          <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
+        </div>
+        <div>
+          <a class="btn btn-small" href="#">Read Now</a>
+        </div>
+      </article>
+      <article class="ships right">
+        <div class="image">
+          <img src="images/placeholder-2by3.svg" alt="…">
+        </div>
+        <div class="content">
+          <h3>Light Speed Laser Ships</h3>
+          <cite>Felicity Orta Olivárez</cite>
+          <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
+        </div>
+        <div>
+          <a class="btn btn-small" href="#">Read Now</a>
+        </div>
+      </article>
+    </section>
   </header>
-  <section>
-    <article class="anderson">
-      <div class="image">
-        <img src="images/placeholder-2by3.svg" alt="…">
-      </div>
-      <div class="content">
-        <h3>The Quest for Anderon</h3>
-        <cite>Tabatha R. Barrett</cite>
-        <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-      </div>
-      <div>
-        <a class="btn btn-small" href="#">Read Now</a>
-      </div>
-    </article>
-    <article class="dino">
-      <div class="image">
-        <img src="images/placeholder-2by3.svg" alt="…">
-      </div>
-      <div class="content">
-        <h3>Dinosaur Knights</h3>
-        <cite>Thomas S. Hedegaard</cite>
-        <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-      </div>
-      <div>
-        <a class="btn btn-small" href="#">Read Now</a>
-      </div>
-    </article>
-    <article class="dragon">
-      <div class="image">
-        <img src="images/placeholder-2by3.svg" alt="…">
-      </div>
-      <div class="content">
-        <h3>The Black Dragon</h3>
-        <cite>Hana Čejková</cite>
-        <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-      </div>
-      <div>
-        <a class="btn btn-small" href="#">Read Now</a>
-      </div>
-    </article>
-    <article class="ships right">
-      <div class="image">
-        <img src="images/placeholder-2by3.svg" alt="…">
-      </div>
-      <div class="content">
-        <h3>Light Speed Laser Ships</h3>
-        <cite>Felicity Orta Olivárez</cite>
-        <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-      </div>
-      <div>
-        <a class="btn btn-small" href="#">Read Now</a>
-      </div>
-    </article>
-  </section>
 
 </body>
 </html>
