justify content space between omg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <header>
-    <h2 class="h2">Featured books</h2>
+    <div class="h2">
+    <h2>Featured books</h2>
+    </div>
     <section>
       <article class="anderson left">
         <div class="image">
@@ -21,7 +23,7 @@
           <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
         </div>
         <div>
-          <a class="btn btn-small" href="#">Read Now</a>
+          <a class="btn btn-small" href="#">Read now</a>
         </div>
       </article>
       <article class="dino">
@@ -34,7 +36,7 @@
           <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
         </div>
         <div>
-          <a class="btn btn-small" href="#">Read Now</a>
+          <a class="btn btn-small" href="#">Read now</a>
         </div>
       </article>
       <article class="dragon">
@@ -47,7 +49,7 @@
           <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
         </div>
         <div>
-          <a class="btn btn-small" href="#">Read Now</a>
+          <a class="btn btn-small" href="#">Read now</a>
         </div>
       </article>
       <article class="ships right">
@@ -60,7 +62,7 @@
           <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
         </div>
         <div>
-          <a class="btn btn-small" href="#">Read Now</a>
+          <a class="btn btn-small" href="#">Read now</a>
         </div>
       </article>
     </section>
