--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     </div>
     <article class="columns">
       <div class="anderon">
-        <img src="images/placeholder-2by3.svg" alt="…">
+        <img src="images/placeholder-2by3.svg" alt="…" class="center">
         <h3>The Quest for Anderon</h3>
         <cite>Tabatha R. Barrett</cite>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
         <a class="btn btn-small" href="#">Read now</a>
       </div>
       <div class="dinosaur">
-        <img src="images/placeholder-2by3.svg" alt="…">
+        <img src="images/placeholder-2by3.svg" alt="…" class="center">
         <h3>Dinosaur Knights</h3>
         <cite>Thomas S. Hedegaard</cite>
         <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
         <a class="btn btn-small" href="#">Read now</a>
       </div>
       <div class="dragon">
-        <img src="images/placeholder-2by3.svg" alt="…">
+        <img src="images/placeholder-2by3.svg" alt="…" class="center">
         <h3>The Black Dragon</h3>
         <cite>Hana Čejková</cite>
         <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
         <a class="btn btn-small" href="#">Read now</a>
       </div>
       <div class="ships">
-        <img src="images/placeholder-2by3.svg" alt="…">
+        <img src="images/placeholder-2by3.svg" alt="…" class="center">
         <h3>Light Speed Laser Ships</h3>
         <cite>Felicity Orta Olivárez</cite>
         <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
